# ifc-rs

./: .gitmodules  Cargo.toml  README.md  build.rs  ifc.proto
src/: client.rs  piazza-server.rs  server.rs  vc-piazza.rs
src/lib/: converter.rs  ifc.rs  ifc_grpc.rs  lib.rs
