[package]
name = "ifc-rs"
version = "0.1.0"
authors = ["Pi <pisong@princeton.edu>"]
edition = "2018"

[dependencies]
grpc            = "0.6.1"
protobuf        = "~2"
protoc-rust = "2.8.1"
label = { path = "./label-rs" }

[build-dependencies]
protoc-rust-grpc = "0.6.1"

[lib]
name = "sharedlib"
path = "src/lib/lib.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "piazza"
path = "src/piazza-server.rs"